-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.3, 6.11.0 FF
-
Windows 11
-
-
3f853f79a (dev), 7fd02fc67 (6.10), c0abf94ed (6.9), 1ddfa796a (tqtc/lts-6.8)
QDialog does not get maximized when showMaximized() method is used.
See sample application: there is a dialog with a button, if you press that button then showMaximized() is invoked. For MainWindow it showMaximized() works fine.
| For Gerrit Dashboard: QTBUG-139291 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 670937,6 | QDialog: Add missing attribute set for explicit hide and show | dev | qt/qtbase | Status: MERGED | +2 | -1 |
| 674224,2 | QDialog: Add missing attribute set for explicit hide and show | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 674454,2 | QDialog: Add missing attribute set for explicit hide and show | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 674555,2 | QDialog: Add missing attribute set for explicit hide and show | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |