QDialog: Add missing attribute set for explicit hide and show

Due to setVisible function being overrided in the QDialog and after
this commit 79be5fa98663ca6b7e905ecb08950f17ccc06e98, the logic for
setting WA_WState_ExplicitShowHide attribute was never called.
It seems like that's the only logic missing from QWidget::setVisible
function so instead of adding the logic here, we call the base
function.

Fixes: QTBUG-139291
Change-Id: I287b4daca3cd682a20aeb8bf4b5ada7eeab2ab19
Pick-to: 6.8
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 3f853f79a6f349ff47dd29a1be924007042ef8d5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 7fd02fc67019e43ff2266fb6ccaae2cf1fe1348f)